# network-engine-portfolio

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: test.cpp
apps/common/: WorkerControllerAppBase.hpp
apps/fep_gateway/: CMakeLists.txt
apps/fep_gateway/src/: FepGatewayApplication.cpp  FepGatewayApplication.hpp  main.cpp
apps/loadgen/: CMakeLists.txt
apps/loadgen/src/: LoadgenApplication.cpp  LoadgenApplication.hpp  main.cpp
apps/mock_exchange/: CMakeLists.txt
apps/mock_exchange/src/: MockExchangeApplication.cpp  MockExchangeApplication.hpp  main.cpp
config/: client.toml  exchange.toml  fep.toml
config/s1/: client.toml  exchange.toml  fep.toml
config/s2/: client.toml  exchange.toml  fep.toml
config/s3/: client.toml  fep.toml
docs/: ENGINE_MODEL.md  note.txt
docs/perf/: BASELINE.md  hardware_spec.md
domains/trading/: CMakeLists.txt
domains/trading/include/trading/controllers/: CompositeController.hpp  IController.hpp  PacketBind.hpp
domains/trading/include/trading/controllers/client/: Install.hpp
domains/trading/include/trading/controllers/exchange/: Install.hpp
domains/trading/include/trading/controllers/gateway/: Install.hpp
domains/trading/include/trading/feature/benchmark/client/: BenchmarkClientController.hpp  LatencyRecorder.hpp
domains/trading/include/trading/feature/benchmark/exchange/: BenchmarkExchangeController.hpp
domains/trading/include/trading/feature/benchmark/gateway/: BenchmarkGatewayController.hpp
domains/trading/include/trading/feature/handshake/client/: RoleHelloClientController.hpp
domains/trading/include/trading/feature/handshake/exchange/: RoleHelloExchangeController.hpp
domains/trading/include/trading/feature/handshake/gateway/: RoleHelloGatewayController.hpp
domains/trading/include/trading/protocol/: FepOpcodes.hpp  FepPackets.hpp  OpcodePolicy.hpp
domains/trading/src/trading/controllers/: CompositeController.cpp
domains/trading/src/trading/controllers/client/: Install.cpp
domains/trading/src/trading/controllers/exchange/: Install.cpp
domains/trading/src/trading/controllers/gateway/: Install.cpp
domains/trading/src/trading/feature/benchmark/client/: BenchmarkClientController.cpp
domains/trading/src/trading/feature/benchmark/exchange/: BenchmarkExchangeController.cpp
domains/trading/src/trading/feature/benchmark/gateway/: BenchmarkGatewayController.cpp
domains/trading/src/trading/feature/handshake/client/: RoleHelloClientController.cpp
domains/trading/src/trading/feature/handshake/exchange/: RoleHelloExchangeController.cpp
domains/trading/src/trading/feature/handshake/gateway/: RoleHelloGatewayController.cpp
engine/: CMakeLists.txt
engine/include/hypernet/: Engine.hpp  EngineConfig.hpp  IApplication.hpp  ISessionRouter.hpp  ISessionSender.hpp  IWorkerScheduler.hpp  SessionHandle.hpp
engine/include/hypernet/buffer/: BufferPool.hpp  BufferView.hpp  RingBuffer.hpp
engine/include/hypernet/connector/: ConnectorManager.hpp  IConnector.hpp
engine/include/hypernet/core/: AppCallbacks.hpp  ConfigLoader.hpp  Defaults.hpp  EffectiveOptions.hpp  GlobalConfig.hpp  Logger.hpp  LoggingConfig.hpp  Options.hpp  SignalHandler.hpp  TaskQueue.hpp  ThreadContext.hpp  TimerWheel.hpp  WorkerContext.hpp
engine/include/hypernet/monitoring/: HttpStatusServer.hpp  Metrics.hpp
engine/include/hypernet/net/: Acceptor.hpp  EpollReactor.hpp  EventLoop.hpp  FdContext.hpp  FdHandler.hpp  Session.hpp  SessionManager.hpp  SessionRouterFactory.hpp  Socket.hpp  WorkerLocal.hpp  WorkerSchedulerFactory.hpp
engine/include/hypernet/protocol/: BuiltinOpcodes.hpp  Dispatcher.hpp  Endian.hpp  IFramer.hpp  LengthPrefixFramer.hpp  MessageCodec.hpp  MessageView.hpp  OpcodeU16.hpp
engine/include/hypernet/util/: NonCopyable.hpp  SpinLock.hpp  ThreadLocal.hpp
engine/src/hypernet/: Engine.cpp  EngineConfig.cpp
engine/src/hypernet/buffer/: BufferPool.cpp  RingBuffer.cpp
engine/src/hypernet/connector/: ConnectorManager.cpp
engine/src/hypernet/core/: ConfigLoader.cpp  Logger.cpp  LoggingConfig.cpp  SignalHandler.cpp  TaskQueue.cpp  TimerWheel.cpp  WorkerContext.cpp
engine/src/hypernet/monitoring/: HttpStatusServer.cpp  Metrics.cpp
engine/src/hypernet/net/: Acceptor.cpp  EpollReactor.cpp  EventLoop.cpp  Session.cpp  SessionManager.cpp  SessionRouterFactory.cpp  Socket.cpp  WorkerSchedulerFactory.cpp
runtime/: CMakeLists.txt
runtime/extensions/app/: CMakeLists.txt
runtime/extensions/app/include/hyperapp/core/: AppRuntime.hpp  ConnState.hpp  OutboundPackets.hpp  SessionContext.hpp  SessionRegistry.hpp  SessionService.hpp  SessionStateMachine.hpp  TopicBroadcaster.hpp  UpstreamGateway.hpp
runtime/extensions/app/include/hyperapp/jobs/: JobSystem.hpp
runtime/extensions/app/include/hyperapp/protocol/: Builders.hpp  FrameworkOpcodes.hpp  PacketReader.hpp  PacketWriter.hpp  Parsers.hpp
runtime/extensions/app/src/hyperapp/core/: AppRuntime.cpp  SessionRegistry.cpp  SessionService.cpp  SessionStateMachine.cpp  TopicBroadcaster.cpp
runtime/extensions/app/src/hyperapp/jobs/: JobSystem.cpp
runtime/include/hypernet/runtime/: Server.hpp  ServerBuilder.hpp
scripts/: bench_sweep.sh  dev_build.sh  dev_run.sh  monitor_system.py  run_bench.sh  summarize_bench.py
tests/: CMakeLists.txt
tests/buffer/: BufferPoolTests.cpp  RingBufferTests.cpp
tests/core/: TaskQueueTests.cpp  TimerWheelTests.cpp
tests/net/: AcceptorTests.cpp  SocketTests.cpp  test_fd_routing.cpp
tests/protocol/: FramerSmokeTests.cpp  MessageCodecTests.cpp  MessageHeaderTests.cpp  PacketCodecTests.cpp
